# diffusion-bot

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
api/: Dockerfile  pyproject.toml
api/api/: constants.py  main.py  schemas.py  tasks.py
api/api/models/: __init__.py  animatediff-lightning.py  model.py  sdxl_turbo.py  segmind.py  small-sd.py  stable_diffusion_xl.py
api/api/utils/: image.py
api/tests/models/: model_test.py
api/utils/: image.py
bot/: .env.sample  .eslintrc.js  Dockerfile  jest.config.ts  package-lock.json  package.json  tsconfig.json
bot/__tests__/integration/services/: api.test.ts
bot/src/: app.ts  commands.ts  constants.ts  handlers.ts
bot/src/commands/: draw.ts  imageToImage.ts  textToImage.ts  textToVideo.ts
bot/src/handlers/: draw.ts  imageToImage.ts  refine.ts  textToImage.ts  textToVideo.ts  utils.ts
bot/src/services/: api.ts
kubernetes/ci/: .env.sample  deploy.bash
kubernetes/helm/charts/diffusion-bot/: Chart.yaml  values.yaml
kubernetes/helm/charts/diffusion-bot/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  pvc.yaml  service.yaml  serviceaccount.yaml
kubernetes/helm/charts/diffusion-bot/templates/tests/: test-connection.yaml
tests/models/: model_test.py
